# crispen

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  main.py  pyproject.toml
crispen/: cli.py  config.py  diff_parser.py  engine.py  errors.py  llm_client.py  stats.py
crispen/file_limiter/: __init__.py  advisor.py  classifier.py  code_gen.py  dep_graph.py  entity_parser.py  runner.py
crispen/refactors/: base.py  caller_updater.py  duplicate_extractor.py  function_splitter.py  if_not_else.py  tuple_dataclass.py
examples/: README.md
examples/duplicate_extraction/01_cross_function/: diff.patch  expected.py  input.py
examples/duplicate_extraction/02_within_function/: diff.patch  expected.py  input.py
tests/: _crispen_api_error_refactor.py  _make_phase1_pkg.py  _make_pkg.py  _raising_transformer.py  func_info_utilities.py  helpers.py  mock_responses.py  parsing_helpers.py  task_helpers.py  test_add_re_exports.py  test_advisor.py  test_alias_map.py  test_applies_refactor_and_writes.py  test_apply_tuple.py  test_apply_tuple_dataclass_crispen_api_error.py  test_apply_tuple_dataclass_parse_error.py  test_base.py  test_best_split.py  test_block_1111.py  test_blocked_private_scopes.py  test_blocked_private_scopes_finds_outside_callers.py  test_blocked_private_scopes_ignores_in_range_callers.py  test_blocked_private_scopes_ignores_public.py  test_blocked_private_scopes_syntax_error.py  test_body_lines.py  test_build_alias_map_ambiguous_name_skipped.py  test_build_alias_map_identity_only.py  test_build_alias_map_invalid_init_skipped.py  test_build_alias_map_skips_compound_statement.py  test_build_alias_map_skips_non_import_in_simple_stmt.py  test_build_alias_map_star_import_skipped.py  test_build_alias_map_with_reexport.py  test_caller_updater.py  test_callers.py  test_categorize.py  test_categorize_duplicate_extracted.py  test_categorize_duplicate_matched.py  test_categorize_function_split.py  test_categorize_if_not_else.py  test_categorize_other_message_ignored.py  (+140 more)
(+44 files in other folders)
