[project]
name = "crispen"
version = "0.1.0"
description = "Automated refactoring tool for Python code diffs"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "libcst>=1.8.6",
    "unidiff>=0.7.5",
]

[project.scripts]
crispen = "crispen.cli:main"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
addopts = "--cov=crispen --cov-branch --cov-fail-under=100"

[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "if __name__ == .__main__.:",
    "pragma: no cover",
]
