[project]
name = "crispen"
version = "0.4.16"
description = "Automated refactoring tool for Python code diffs"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "libcst>=1.8.6",
    "openai>=1.0.0",
    "pyflakes>=3.4.0",
    "unidiff>=0.7.5",
]

[project.scripts]
crispen = "crispen.cli:main"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[tool.crispen]
min_duplicate_weight = 3
max_duplicate_seq_len = 8
min_tuple_size = 4
provider = "anthropic"
model = "claude-sonnet-4-6"
max_function_length = 75
helper_docstrings = false
update_diff_file_callers = true

[tool.pytest.ini_options]
addopts = "--cov=crispen --cov-branch --cov-fail-under=100"

[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "if __name__ == .__main__.:",
    "pragma: no cover",
]
